--- a/Exercicios/EX0022 imagens de fundo/fundo006.html
+++ b/Exercicios/EX0022 imagens de fundo/fundo006.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
+            background: black url(Imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover ;
+
+            /** Shorthand - background
+            Color > image > position >  repeat >  size (ainda nao funciona, colocar separado)> attachment
+
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover ;
+            background-attachment: fixed;
+            */
 
+            
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,11 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias adipisci quaerat minus illum obcaecati iure quas laudantium consectetur cumque tempore, illo doloremque fugit eum vitae debitis, reiciendis at dolore optio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores inventore nobis numquam repellendus repellat iure optio necessitatibus, quia assumenda minus distinctio voluptas fugiat incidunt cum in amet ut temporibus cumque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint voluptatibus nobis error minima et quidem, ratione iure? Et a ex harum rerum tempora, blanditiis, earum neque possimus reiciendis, minus provident!</p>
         
     </main>
