--- a/Exercicios/EX0023 tabelas/tabela002.html
+++ b/Exercicios/EX0023 tabelas/tabela002.html
@@ -31,6 +31,10 @@
         color: white;
        }
 
+       tbody > tr:nth-child(2n){  /* 2n-1 ou ODD*/
+        background-color: lightgray;
+       }
+
         td.num{
             text-align: right;
         }
