--- a/Exercicios/EX0023 tabelas/tabela002.html
+++ b/Exercicios/EX0023 tabelas/tabela002.html
@@ -11,6 +11,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
 
         }
 
@@ -29,6 +30,12 @@
        thead , tfoot{
         background-color: #383838;
         color: white;
+       }
+
+       thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
        }
 
        tbody > tr:nth-child(2n){  /* 2n-1 ou ODD*/
