--- a/Exercicios/EX0024 iframe/iframe002.html
+++ b/Exercicios/EX0024 iframe/iframe002.html
@@ -9,7 +9,7 @@
     <h1>Conteudo local</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae soluta reiciendis sequi quis ex voluptatibus tempora perspiciatis, sed, ullam nobis, minus architecto! Rem quasi quam vero reiciendis magnam vitae ipsa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo omnis suscipit sint animi repellendus dolorem cum, distinctio voluptatum dolor quis ipsam temporibus facilis, quae autem quam officia delectus esse id.</p>
 
-    <iframe src="pagina001.html" width="500" height="500"></iframe>
+    <iframe src="paginasextras/pagina001.html" width="500" height="500"></iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque eaque quibusdam magnam labore molestias, ex, laborum atque autem iste hic expedita voluptate cupiditate facilis vitae in nulla! Magni, voluptatem ad! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, et nisi sequi amet aut totam inventore excepturi, ducimus distinctio molestiae modi exercitationem, nemo animi iusto atque quam repellat alias ipsa.</p>
 </body>
 </html>
