configurações do iframe

--- a/Exercicios/EX0024 iframe/paginasextras/pagina001.html
+++ b/Exercicios/EX0024 iframe/paginasextras/pagina001.html
@@ -10,9 +10,151 @@
             background-color: rgb(171, 171, 188);
             color: white;
         }
+        table{
+         border-collapse: collapse;
+        }
+        caption{
+            font-size: 1.5em;
+            font-weight: bolder;
+            padding: 20px;
+        }
+        th, td{
+            border: 1px solid black;
+            padding: 10px; 
+        }
+        tr:nth-child(even){
+            background-color: bisque
+        }
+        
     </style>
 </head>
 <body>
-    <h1>isto é um teste</h1>
+    <table>
+        <caption>Tabelas responsivas</caption>
+        <thead>
+            <tr>
+                <th>Produtos</th>
+                <th>Jan</th>
+                <th>Fev</th>
+                <th>Mar</th>
+                <th>Abr</th>
+                <th>Mai</th>
+                <th>Jun</th>
+                <th>Jul</th>
+                <th>Ago</th>
+                <th>Set</th>
+                <th>Out</th>
+                <th>Nov</th>
+                <th>Dez</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>TV</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Celular</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Ipad</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Lavadora</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Máquina</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Sound</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+            <tr>
+                <td>Video Game</td>
+                <td>12</td>
+                <td>15</td>
+                <td>14</td>
+                <td>13</td>
+                <td>12</td>
+                <td>01</td>
+                <td>78</td>
+                <td>56</td>
+                <td>84</td>
+                <td>46</td>
+                <td>48</td>
+                <td>48</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
