--- a/Exercicios/EX0024 iframe/iframe002.html
+++ b/Exercicios/EX0024 iframe/iframe002.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste com iframe</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        iframe{
+            display: block;
+            margin: auto;
+            width: 100px;
+            
+        }
+    </style>
 </head>
 <body>
     <h1>Conteudo local</h1>
